<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDrivers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="show"
            android:text="@string/btn_text_driver"/>
        <Button
            android:id="@+id/btnTruck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="show"
            android:text="@string/btn_text_truck" />
        <Button
            android:id="@+id/btnClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="show"
            android:text="@string/btn_text_client" />
        <Button
            android:id="@+id/btnOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="show"
            android:text="@string/btn_text_orders" />
        <Button
            android:id="@+id/btnRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="show"
            android:text="@string/btn_text_route" />
        <Button
            android:id="@+id/btnMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="show"
            android:text="@string/btn_text_maps" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
